<resources>
    <string name="app_name">Bikroybaba Seller</string>
    <string name="dialog_title">Bikroybaba</string>
    <string name="dialog_title_bn">বিক্রয়বাবা</string>
    <string name="one">১</string>
    <string name="two">২</string>
    <string name="three">৩</string>
    <string name="four">৪</string>
    <string name="five">৫</string>
    <string name="six">৬</string>
    <string name="seven">৭</string>
    <string name="eight">৮</string>
    <string name="nine">৯</string>
    <string name="zero">০</string>
    <string name="plus">+</string>
    <string name="ok_string_bn">ঠিক আছে</string>
    <string name="ok_string_en">Ok</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_order">Order</string>
    <string name="menu_pending_order">Pending Order</string>
    <string name="menu_all_order">All Order</string>
    <string name="menu_product">Product</string>
    <string name="menu_add_product">Add Product</string>
    <string name="menu_all_product">All Product</string>
    <string name="menu_offer">Offer</string>
    <string name="menu_create_offer">Create Offer</string>
    <string name="menu_offer_list">Offer List</string>
    <string name="menu_delivery_area_selection">Delivery Area Selection</string>
    <string name="menu_report">Report</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_rating">Rating</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_language">Language</string>
    <string name="menu_version">Version: %1$s</string>
    <string name="phone_number_email">Phone Number</string>
    <string name="phone_number_email_bn">ফোন নাম্বার</string>
    <string name="password">Password</string>
    <string name="password_bn">পাসওয়ার্ড</string>
    <string name="logo">logo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_bn">সাইন ইন</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="or_sign_in_with_bn">অথবা সাইন ইন করুন</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="do_you_have_any_shop">My Own Shop</string>
    <string name="do_you_have_any_shop_bn">আমার নিজের দোকান</string>
    <string name="register_for_online_shop">Register For Online Shop</string>
    <string name="register_for_online_shop_bn">অনলাইন দোকানের জন্য রেজিস্ট্রেশন করুন</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_bn">পুরো নাম</string>
    <string name="email">Email</string>
    <string name="email_bn">ইমেল</string>
    <string name="shop_type">Shop Type</string>
    <string name="shop_type_bn">দোকানের ধরণ</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_name_bn">দোকানের নাম</string>
    <string name="shop_address">Shop Address</string>
    <string name="shop_address_bn">দোকানের ঠিকানা</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_bn">নিবন্ধন করুন</string>
    <string name="back_arrow">back arrow</string>
    <string name="success_image">success image</string>
    <string name="your_request_has_been_sent_successfully">Your request has been sent successfully</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawer_logo">drawer logo</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="category_bn">ক্যাটাগরি</string>
    <string name="product_type">Sub Category</string>
    <string name="product_type_bn">পণ্যের ধরণ</string>
    <string name="brand">Brand</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_bn_">পণ্যের নাম</string>
    <string name="write_product_name_here">Write product name here</string>
    <string name="product_size">Product Size</string>
    <string name="product_size_bn">পণ্যের সাইজ</string>
    <string name="unit_size">Unit</string>
    <string name="weight_of_the_unit">Weight of the Unit</string>
    <string name="retail_sell_price_per_unit">Retail Sell Price(Per Unit)</string>
    <string name="tk">TK</string>
    <string name="tk_bn_">টাকা</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="total_price_wholesale">Total Price</string>
    <string name="product_details">Product Details</string>
    <string name="product_attribute">Attribute(Size, color ...)</string>
    <string name="product_attribute_value">Value(Size, color ...)</string>
    <string name="hint_product_details">Type product details…</string>
    <string name="product_details_bn">পণ্যের বিস্তারিত</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="gallery_image">gallery image</string>
    <string name="browse">Browse</string>
    <string name="browse_bn">ব্রাউজ</string>
    <string name="forward_arrow">forward arrow</string>
    <string name="product_image">product image</string>
    <string name="one_of_our_agent_will_call_you_soon">One of our agent will call you soon</string>
    <string name="one_of_our_agent_will_call_you_soon_bn">আমাদের এজেন্ট আপনাকে খুব শীঘ্রই কল করবে</string>
    <string name="product_successfully_added">Product Successfully Added</string>
    <string name="product_successfully_added_bn">পণ্য সফলভাবে যোগ হয়েছে</string>
    <string name="add_more">Add More</string>
    <string name="add_more_bn">আরো যুক্ত করুন</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_product">Edit Product</string>
    <string name="active_product">Active Product</string>
    <string name="inactive_product">Inactive Product</string>
    <string name="total_active_product">Total Active Product</string>
    <string name="new_order">New Order</string>
    <string name="limited_product">Limited Product</string>
    <string name="add_new_product">Add New Product</string>
    <string name="stock_limited_product">Stock Limited Product</string>
    <string name="create_offer">Create Offer</string>
    <string name="edit_offer">Edit Offer</string>
    <string name="select_create_offer">Select/Create Offer</string>
    <string name="percentage_or_amount">Percentage or Amount</string>
    <string name="amount_of_discount">Amount of Discount</string>
    <string name="percentage_of_discount">Percentage of Discount %</string>
    <string name="offer_name">Offer Name</string>
    <string name="offer_period">Offer Period</string>
    <string name="to">To</string>
    <string name="offer_type">Offer Type</string>
    <string name="all_type">All Type</string>
    <string name="include_exclude_products">Include/Exclude Products</string>
    <string name="add_item">Add Item</string>
    <string name="include_exclude_products_bn">পণ্য অন্তর্ভুক্ত / বাদ দিন</string>
    <string name="create_this_offer">Create this offer</string>
    <string name="create_this_offer_bn">অফারটি তৈরী করুন</string>
    <string name="delete">Delete</string>
    <string name="delete_bn">ডিলিট</string>
    <string name="start_stop">Stop/Start</string>
    <string name="submenu">submenu</string>
    <string name="menu_icon">menu icon</string>
    <string name="menu">Menu</string>
    <string name="menu_bn">BN</string>
    <string name="menu_en">EN</string>
    <string name="camera_image">camera image</string>
    <string name="colon">:</string>
    <string name="web">Website</string>
    <string name="web_bn">ওয়েবসাইট</string>
    <string name="address">Address</string>
    <string name="address_bn">ঠিকানা</string>
    <string name="city">City</string>
    <string name="error_enter_attribute">Enter Attribute</string>
    <string name="city_bn">শহর</string>
    <string name="area">Area</string>
    <string name="area_bn">এলাকা</string>
    <string name="private_information">Private Information</string>
    <string name="private_information_bn">প্রাইভেট তথ্য</string>
    <string name="previous_order">Order List </string>
    <string name="your_product">Product List</string>
    <string name="allProduct">All Product</string>
    <string name="search">Search</string>
    <string name="myRating">Rating</string>
    <string name="offerList">Offer List</string>
    <string name="buyer_image">buyer image</string>
    <string name="your_order_successfully_created">Your Order Successfully Created</string>
    <string name="offer_description">Offer Description</string>
    <string name="offer_description_bn">অফার বর্ণনা</string>
    <string name="discount_amount">Discount amount</string>
    <string name="offer_name_auto">Offer Name(Auto)</string>
    <string name="edit_image">edit image</string>
    <string name="edit">Edit</string>
    <string name="edit_bn">এডিট</string>
    <string name="stop_this_offer">Stop this offer</string>
    <string name="stop_this_offer_bn">এই অফার বন্ধ করুন</string>
    <string name="details">Edit</string>
    <string name="minus">-</string>
    <string name="potato">Potato</string>
    <string name="_50_kg_available">50 Kg available</string>
    <string name="_120">৳ 120</string>
    <string name="per_kg">per kg</string>
    <string name="_0">0</string>
    <string name="priority_checking">priority checking</string>
    <string name="your_active_product">Your active product</string>
    <string name="priority_order">Priority order</string>
    <string name="max_delivery_time">Max Delivery Time</string>
    <string name="max_delivery_time_bn">সর্বোচ্চ ডেলিভারীর সময়</string>
    <string name="weight_limit">Weight Limit</string>
    <string name="weight_limit_bn">ওজনের সীমা</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_bn">পাসওয়ার্ড পরিবর্তন</string>
    <string name="re_type_new">Re-type</string>
    <string name="re_type_new_bn">পুনরায় লিখুন</string>
    <string name="new_text">New</string>
    <string name="new_text_bn">নতুন</string>
    <string name="current">Current</string>
    <string name="current_bn">বর্তমান</string>
    <string name="save">Save</string>
    <string name="forget_your_password">Forgot Password?</string>
    <string name="forget_your_password_bn">পাসওয়ার্ড ভুলে গেছেন?</string>
    <string name="minimum_buy">Minimum Buy</string>
    <string name="minimum_buy_bn">মিনিমাম বিক্রির পরিমাণ</string>
    <string name="product_add">Product Add</string>
    <string name="to_calender">TO</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="current_date">current date</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="welcome">Welcome</string>
    <string name="off_day">Off day</string>
    <string name="ok">OK</string>
    <string name="select_opening_time">Select Opening Time</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="by_signing_up_you_agree_with_the">By signing up,you agree with the</string>
</resources>