<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/app_black1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/control_calender_cancel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_cancel"
            app:tint="@color/app_white1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <!-- prev button -->

            <!-- date title -->
            <ImageView
                android:id="@+id/calendar_prev_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/app_white1" />

            <TextView
                android:id="@+id/calendar_date_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/current_date"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/app_white1"
                android:textSize="@dimen/font_extreme" />

            <!-- next button -->
            <ImageView
                android:id="@+id/calendar_next_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_arrow_forward_24"
                app:tint="@color/app_white1" />
        </LinearLayout>
    </LinearLayout>

    <!-- days header -->
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#D3E7F8"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#A7DAF1"
            android:gravity="center_horizontal"
            android:text="@string/sun"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="#A7DAF1"
            android:gravity="center_horizontal"
            android:text="@string/mon"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="#A7DAF1"
            android:gravity="center_horizontal"
            android:text="@string/tue"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="#A7DAF1"
            android:gravity="center_horizontal"
            android:text="@string/wed"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="#A7DAF1"
            android:gravity="center_horizontal"
            android:text="@string/thu"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="#A7DAF1"
            android:gravity="center_horizontal"
            android:text="@string/fri"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="#A7DAF1"
            android:gravity="center_horizontal"
            android:text="@string/sat"
            android:textColor="#222222" />
    </LinearLayout>

    <!-- days view -->
    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D3E7F8"
        android:numColumns="7" />
</LinearLayout>