<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:background="@color/app_yellow4"
        >

        <ImageView
            android:id="@+id/product_added_successfully_back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back_arrow"
            android:padding="10dp"
            android:background="?selectableItemBackground"
            android:src="@drawable/ic_back"
            app:tint="@color/app_black1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/success_image"
            android:src="@drawable/ic_check" />


        <TextView
            android:id="@+id/productAddSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/product_successfully_added"
            android:textColor="@color/app_yellow"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/product_added_successfully_add_more"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/yellow_background_capsul_shape_fill"
            android:gravity="center"
            android:text="@string/add_more"
            android:padding="0dp"
            android:textColor="@color/app_black1"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/font_m"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/product_added_successfully_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/app_yellow"
            android:background="@drawable/yellow_background_capsul_shape_fill"
            android:gravity="center"
            android:text="@string/menu_dashboard"
            android:padding="0dp"
            android:textColor="@color/app_black1"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/font_m"
            tools:ignore="UnusedAttribute" />


    </LinearLayout>
</layout>