<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_200"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Fragment.authentication.SignIn">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="100dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo"
            android:paddingStart="-12dp"
            android:paddingEnd="-2dp"
            android:src="@drawable/ic_bikroybaba"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sign_in_welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/welcome"
            android:textColor="@color/app_black1"
            android:textSize="@dimen/font_huge"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

        <TextView
            android:id="@+id/sign_in_aapnarshop_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="বিক্রয়বাবা'তে!"
            android:textColor="@color/app_black1"
            android:textSize="@dimen/font_xxxl"
            app:layout_constraintStart_toStartOf="@+id/sign_in_welcome_tv"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_welcome_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_phone_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:boxBackgroundColor="@color/white_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/sign_in_aapnarshop_tv"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_aapnarshop_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_phone_emil_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_email"
                android:textColorHint="@color/black"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold"
                app:errorEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/white_200"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_phone_layout"
            app:layout_constraintStart_toStartOf="@+id/sign_in_phone_layout"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_phone_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/app_yellow">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textSize="@dimen/font_xl"
                android:textStyle="bold"
                app:errorEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sign_in_forget_pas_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:text="@string/forget_your_password"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_xl"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_password_layout"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password_layout" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:background="@drawable/yellow_background_capsul_shape_fill"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/app_black1"
            android:textSize="@dimen/font_m"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_forget_pas_tv"
            app:layout_constraintStart_toStartOf="@+id/sign_in_password_layout"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password_layout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sign_in_message_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/do_you_have_any_shop"
            android:textColor="@color/app_black1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sign_in_registerForShop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/register_for_online_shop"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_huge"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_message_tv"
            app:layout_constraintStart_toStartOf="@+id/sign_in_message_tv"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_message_tv"
            app:layout_constraintVertical_bias="0.04000002" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="bottom|center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="2dp"
                android:text="@string/by_signing_up_you_agree_with_the"
                android:textColor="@color/app_hint"
                android:textSize="@dimen/font_m"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_terms_of_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/terms_of_service"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/font_m"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/and"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:text="@string/and"
                    android:textColor="@color/app_hint"
                    android:textSize="@dimen/font_m"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:maxLines="3"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/font_m"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>